--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ nav button#menuButton {
 }
 
 .main .left h3 span {
-    color: #5e3bee;
+    color: #666af6;
 }
 
 .main .left p {
@@ -126,7 +126,7 @@ nav button#menuButton {
     margin-top: 40px;
     color: #fff;
     cursor: pointer;
-    background-color: #5e3bee;
+    background-color: #666af6;
     padding: 14px 24px;
     border-radius: 1px solid transparent;
     border-radius: 5px;
@@ -145,7 +145,6 @@ nav button#menuButton {
 
 .skills {
     padding: 110px 85px 0;
-    margin-bottom: 900px;
 }
 
 .skills h3,
@@ -188,19 +187,41 @@ nav button#menuButton {
     box-shadow: 0 0 16px rgba(0, 0, 0, 0.1);
 }
 
-.skills .skill-items .item .icon i{
+.skills .skill-items .item .icon i {
     font-size: 26px;
     color: #006b6a;
 }
 
 .skills .skill-items .item h4,
-.portfolio .portfo-items .item .info h4{
+.portfolio .portfo-items .item .info h4 {
     font-size: 20px;
 }
 
-.skills .skill-items .item p{
+.skills .skill-items .item p {
     margin-top: 20px;
     font-size: 14px;
     line-height: 22px;
     color: #1c1e53;
+}
+
+.about {
+    padding: 110px;
+    display: flex;
+    align-items: center;
+    gap: 60px;
+}
+
+.about .left {
+    background-color: #deebee;
+    border-radius: 10px 10px 0 0;
+}
+
+
+.about .left img {
+    width: 440px;
+}
+
+.about .right p {
+    font-size: 16px;
+    margin-top: 30px;
 }
