--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a:hover {
 }
 
 h5 {
-    font-size: 20px;
+    font-size: 25px;
 }
 
 li {
@@ -147,12 +147,44 @@ nav button#menuButton {
     padding: 110px 85px 0;
 }
 
+.skills .skill {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+   
+}
+
+.skill p:hover {
+    -xpedu-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+  
+}
+
+.skills .skill p {
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 15px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    
+}
+
+.skills .skill i {
+    margin-top: 25px;
+    font-size: 50px;
+    gap: 10px;
+}
+
 .skills h3,
 .about .right h3,
 .portfolio .header h3,
 .feedback h3 {
     font-size: 40px;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .skills .skill-items {
@@ -167,12 +199,13 @@ nav button#menuButton {
     border-radius: 10px;
     padding: 32px;
     border-bottom: 4px solid transparent;
-    cursor: pointer;
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 
 .skills .skill-items .item:hover {
     border-color: #5e3bee;
+    
 }
 
 .skills .skill-items .item .icon {
