--- a/style.css
+++ b/style.css
@@ -94,8 +94,9 @@ nav button#menuButton {
 }
 
 .main {
-    background-color: #deebee;
-    padding: 90px 85px;
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(31, 22, 105, 1) 0%, rgba(15, 5, 76, 1) 77%, rgba(12, 4, 68, 1) 86%, rgba(12, 4, 68, 1) 95%, rgba(15, 5, 76, 1) 99%);
+    padding: 150px 85px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -357,7 +358,11 @@ footer .top .social-links {
     display: flex;
     align-items: center;
     gap: 10px;
-    font-size: 22px;
+    font-size: 40px;
+}
+
+footer .social-links a {
+    font-size: 30px;
 }
 
 footer .separator {
@@ -374,4 +379,219 @@ footer .bottom p {
 footer .bottom .links a {
     font-size: 15px;
     margin-left: 14px;
+}
+
+
+@media screen and (max-width:1200px) {
+
+    .main .left h5 {
+        font-size: 18px;
+    }
+
+    .main .left h3 {
+        font-size: 36px;
+    }
+
+    .main .left p {
+        font-size: 18px;
+    }
+
+    .main .right img {
+        width: 380px;
+    }
+
+    .skills .skill-items {
+        gap: 10px;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .skills .skill {
+        gap: 10px;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    .skills .skill-items .item {
+        width: 49%;
+    }
+
+    .about .left img {
+        width: 400px;
+    }
+
+    .skills h3,
+    .about .right h3,
+    .portfolio .header h3 {
+        font-size: 32px;
+    }
+
+    .about .right p {
+        font-size: 15px;
+    }
+
+}
+
+@media screen and (max-width:990px) {
+    nav button {
+        display: none;
+    }
+
+    nav ul {
+        gap: 20px;
+    }
+
+    nav ul li a {
+        font-size: 15px;
+    }
+
+    .main {
+        flex-direction: column;
+    }
+
+    .about {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .portfolio .portfo-items {
+        gap: 22px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .portfolio .portfo-items .item {
+        width: 48%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    nav {
+        justify-content: space-between;
+        padding: 0 42px;
+    }
+
+    nav ul {
+        display: none;
+    }
+
+    nav.open .logo {
+        display: none;
+    }
+
+    nav.open ul {
+        display: flex;
+    }
+
+    nav button#menuButton {
+        display: flex;
+    }
+
+    .main {
+        padding: 42px;
+    }
+
+    .skills {
+        padding: 85px 42px 0;
+    }
+
+    .skills .skill {
+        gap: 10px;
+    }
+
+    .skills .skill-items {
+        gap: 8px;
+    }
+
+    .about {
+        padding: 85px 42px;
+    }
+
+    .portfolio {
+        padding: 60px 42px;
+    }
+
+    .portfolio .portfo-items {
+        gap: 20px;
+    }
+
+    footer {
+        padding: 85px 42px;
+    }
+
+    footer .bottom {
+        flex-direction: column-reverse;
+        gap: 14px;
+    }
+}
+
+@media screen and (max-width:576px) {
+    nav ul li a {
+        font-size: 13px;
+    }
+
+    nav .logo a {
+        font-size: 18px;
+    }
+
+    .main .left h3 {
+        font-size: 32px;
+    }
+
+    .main .left p {
+        font-size: 16px;
+    }
+
+    .main .left button {
+        width: 100%;
+    }
+
+    .skill .skill {
+        width: 100%;
+    }
+
+    .skills .skill-items .item {
+        width: 100%;
+    }
+
+    .portfolio .portfo-items .item {
+        width: 100%;
+    }
+
+    .portfolio .header {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .portfolio .header button {
+        font-size: 12px;
+        padding: 8px 14px;
+    }
+
+    footer {
+        width: 100%;
+        padding: 30px 5px;
+    }
+
+    footer .bottom .links a {
+        justify-content: space-between;
+        margin-bottom: 10px;
+    }
+
+    footer .logo a {
+        font-size: 20px;
+    }
+
+    footer .social-links a {
+        font-size: 20px;
+    }
+
+    footer .logo img {
+        display: none;
+    }
+
+    footer .bottom .links {
+        margin-bottom: 20px;
+    }
 }
