--- a/style.css
+++ b/style.css
@@ -580,6 +580,14 @@ footer .bottom .links a i{
         gap: 30px;
     }
 
+    .header .inner-header h3{
+        font-size: 30px;
+    }
+
+    .header .inner-header h5{
+        font-size: 20px;
+    }
+
     .skill .skill {
         width: 100%;
     }
@@ -619,7 +627,7 @@ footer .bottom .links a i{
     }
 
     footer .social-links a {
-        font-size: 20px;
+        font-size: 30px;
     }
 
     footer .logo img {
