--- a/style.css
+++ b/style.css
@@ -1,28 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 html {
     scroll-behavior: smooth;
+
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 body {
-    background: linear-gradient(60deg, rgba(84, 58, 183, 1) 0%, rgb(190, 247, 255) 100%);
+    background: linear-gradient(60deg,
+            rgba(84, 58, 183, 1) 0%,
+            rgb(190, 247, 255) 100%);
 }
 
 a {
     text-decoration: none;
-    color: #000000;
+    color: #5c49bd;
     transition: all 0.3s ease;
+    font-weight: bold;
+    margin-right: 30px;
 }
 
 a:hover {
-    color: #5c49bd !important;
+    color: #baacff !important;
 }
 
 h5 {
@@ -31,19 +36,35 @@ h5 {
 }
 
 li {
+    display: flex;
     list-style: none;
+    transition: all 0.3s ease;
+    margin-left: 20px;
 }
 
 nav {
     background: #ffffff;
     position: sticky;
     top: 0;
-    padding: 0 85px;
+    padding: 0 20px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    height: 80px;
+    justify-content: center;
+    height: 70px;
+    font-size: 20px;
     box-shadow: 0 5px 80px rgba(0, 0, 0, 0.1);
+}
+
+nav.open ul {
+    display: flex;
+    align-items: center;
+    animation: slideDown 0.4s ease;
+}
+
+nav li:hover {
+    -xpedu-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
 }
 
 nav .logo,
@@ -60,32 +81,22 @@ footer .logo a {
     font-size: 20px;
 }
 
-nav .logo img,
-footer .logo img {
-    width: 70px;
-    height: 70px;
-    border: transparent;
-}
-
 nav ul,
 footer .top ul {
     display: flex;
-    gap: 40px;
+    margin-right: 30px;
 }
-
 
 nav button#menuButton {
     display: none;
     align-items: center;
     justify-content: center;
     font-size: 25px;
-    padding: 7px;
     border: none;
 }
 
 .header {
     text-align: center;
-    background: linear-gradient(60deg, rgba(84, 58, 183, 1) 0%, rgb(190, 247, 255) 100%);
     color: white;
 }
 
@@ -110,7 +121,6 @@ nav button#menuButton {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
 .waves {
@@ -124,29 +134,33 @@ nav button#menuButton {
 .content {
     text-align: center;
     background-color: white;
-    padding-bottom: 125px;
-
+    padding-bottom: 16vh;
 }
 
 .content a button {
-    margin-top: 50px;
-    color: #fff;
     cursor: pointer;
-    background-color: #5c49bd;
+    background: linear-gradient(60deg,
+            rgb(125, 93, 255) 0%,
+            rgb(190, 247, 255) 100%);
+    color: white;
     padding: 20px 30px;
     border-radius: 30px 200px 30px 200px;
-    border-color: #5c49bd;
+    border: none;
     transition: all 0.3s ease-in-out;
-    font-size: 18px;
+    font-size: 15px;
+    margin: 30px 0;
 }
 
 .content a button:hover {
     background-color: #000000;
     border-color: #000000;
+    -xpedu-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
 }
 
 .parallax>use {
-    animation: move-forever 25s cubic-bezier(.55, .5, .45, .5) infinite;
+    animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
 }
 
 .parallax>use:nth-child(1) {
@@ -179,6 +193,16 @@ nav button#menuButton {
     }
 }
 
+@keyframes slideDown {
+    0% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
 @media (max-width: 768px) {
     .waves {
         height: 40px;
@@ -188,7 +212,6 @@ nav button#menuButton {
     .content {
         height: 30vh;
     }
-
 }
 
 .skills {
@@ -201,18 +224,17 @@ nav button#menuButton {
     align-items: center;
     margin-bottom: 50px;
     padding: 110px 85px;
-
 }
 
 .skill p:hover {
     -xpedu-transform: scale(1.3);
     -ms-transform: scale(1.3);
     transform: scale(1.3);
-
 }
 
 .skills .skill p {
     color: #5c49bd;
+    margin: 0 15px;
     width: 150px;
     display: flex;
     flex-direction: column;
@@ -225,6 +247,10 @@ nav button#menuButton {
 .skills .skill span {
     color: #ffffff;
     padding: 10px;
+}
+
+.skills .skill p:hover{
+    color: #000000 !important;
 }
 
 .skills .skill i {
@@ -260,7 +286,6 @@ nav button#menuButton {
 
 .skills .skill-items .item:hover {
     border-color: #000000;
-
 }
 
 .skills .skill-items .item .icon {
@@ -289,7 +314,9 @@ nav button#menuButton {
     margin-top: 20px;
     font-size: 16px;
     line-height: 25px;
-    color: #000000
+    color: #000000;
+    text-align: justify;
+    text-indent: 20px;
 }
 
 .about {
@@ -299,7 +326,6 @@ nav button#menuButton {
     gap: 60px;
 }
 
-
 .about .left img {
     width: 440px;
 }
@@ -308,6 +334,8 @@ nav button#menuButton {
     font-size: 23px;
     margin-top: 30px;
     color: #ffffff;
+    text-align: justify;
+    text-indent: 20px;
 }
 
 .portfolio {
@@ -325,7 +353,7 @@ nav button#menuButton {
 .portfolio .header h5 {
     color: #ffffff;
     font-size: 25px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .portfolio .header button {
@@ -345,20 +373,20 @@ nav button#menuButton {
 }
 
 .portfolio .portfo-items {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(650px, 1fr));
     gap: 40px;
+    justify-items: center;
 }
 
 .portfolio .portfo-items .item {
-    width: 30%;
+    width: 100%;
     color: #000000;
     background-color: #fff;
     border-radius: 10px;
     border-bottom: 7px solid transparent;
     cursor: pointer;
-    box-shadow: 0 5px 32px rgba(0.0.0.0.15);
+    box-shadow: 0 5px 32px rgba(0.0.15);
     transition: all 0.3s ease;
 }
 
@@ -378,18 +406,21 @@ nav button#menuButton {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    padding: 30px 32px 42px;
+    padding: 20px 40px 20px;
 }
 
 .portfolio .portfo-items .item .info p {
     font-size: 17px;
+    margin: 0;
+    text-align: justify;
+    text-indent: 20px;
 }
 
 .portfolio .portfo-items .item .info a {
-    text-decoration: underline;
-    text-underline-offset: 12px;
-    text-decoration-color: #033caa;
-
+    display: flex;
+    padding: 15px;
+    align-items: center;
+    justify-content: center;
 }
 
 .portfolio .portfo-items .item .info a i {
@@ -407,7 +438,7 @@ footer .top,
 footer .bottom {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 footer .top .social-links {
@@ -426,7 +457,7 @@ footer .separator {
     width: 100%;
     height: 1px;
     background-color: #ffffff;
-    margin: 30px 0 20px;
+    margin: 30px 0 35px;
 }
 
 footer .bottom p {
@@ -436,7 +467,7 @@ footer .bottom p {
 
 footer .bottom .links a {
     color: #ffffff;
-    font-size: 20px;
+    font-size: 22px;
 }
 
 footer .bottom .links a i {
@@ -444,8 +475,7 @@ footer .bottom .links a i {
     margin-left: 5px;
 }
 
-@media screen and (max-width:1200px) {
-
+@media screen and (max-width: 1400px) {
     .skills .skill-items {
         gap: 10px;
         justify-content: space-between;
@@ -462,6 +492,10 @@ footer .bottom .links a i {
         width: 49%;
     }
 
+    .portfolio .portfo-items .item {
+        width: 100%;
+    }
+
     .about .left img {
         width: 400px;
     }
@@ -473,27 +507,32 @@ footer .bottom .links a i {
     }
 
     .about .right p {
-        font-size: 15px;
+        font-size: 20px;
     }
-
 }
 
-@media screen and (max-width:990px) {
+@media screen and (max-width: 1200px) {
     nav button {
         display: none;
     }
 
-    nav ul {
-        gap: 20px;
+    .content {
+        height: 22vh;
     }
 
+
     nav ul li a {
-        font-size: 15px;
+        font-size: 20px;
     }
 
     .about {
         flex-direction: column;
         justify-content: center;
+    }
+
+    .about .right p {
+        text-align: justify;
+        text-indent: 20px
     }
 
     .portfolio .portfo-items {
@@ -503,20 +542,22 @@ footer .bottom .links a i {
     }
 
     .portfolio .portfo-items .item {
-        width: 48%;
+        width: 100%;
     }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
     nav {
-        justify-content: space-between;
-        padding: 0 42px;
+        justify-content: end;
+    }
+
+    .content {
+        height: 32vh;
     }
 
     nav ul {
         display: none;
     }
-
 
     nav.open ul {
         display: flex;
@@ -525,6 +566,17 @@ footer .bottom .links a i {
     nav button#menuButton {
         display: flex;
         background: transparent;
+        transition: all 0.3s ease;
+    }
+
+    nav button#menuButton:active {
+        -xpedu-transform: scale(1.5);
+        -ms-transform: scale(1.5);
+        transform: scale(1.5);
+    }
+
+    .content button {
+        margin-top: 50%;
     }
 
     .skills {
@@ -543,12 +595,18 @@ footer .bottom .links a i {
         padding: 85px 42px;
     }
 
+    .about .right p {
+        text-align: justify;
+        text-indent: 20px
+    }
+
+
     .portfolio {
         padding: 60px 42px;
     }
 
     .portfolio .portfo-items {
-        gap: 20px;
+        gap: 40px;
     }
 
     footer {
@@ -561,31 +619,18 @@ footer .bottom .links a i {
     }
 }
 
-@media screen and (max-width:576px) {
+@media screen and (max-width: 576px) {
     nav ul li a {
-        font-size: 13px;
-    }
-
-    nav .logo {
-        display: none;
-    }
-
-    nav .logo a {
-        font-size: 18px;
-    }
-
-    nav {
-        height: 60px;
+        font-size: 15px;
     }
 
     nav {
         display: flex;
-        justify-content: flex-end;
-        gap: 40px;
+        justify-content: end;
     }
 
     .header .inner-header h3 {
-        font-size: 27px;
+        font-size: 35px;
     }
 
     .header .inner-header h5 {
@@ -600,8 +645,24 @@ footer .bottom .links a i {
         width: 100%;
     }
 
+    .skills .skill-items .item p {
+        text-indent: 0;
+        text-indent: 20px
+    }
+
+    .about .right p {
+        text-indent: 0;
+        text-align: justify;
+        text-indent: 20px
+    }
+
     .portfolio .portfo-items .item {
-        width: 100%;
+        width: 80%;
+    }
+
+    .portfolio .portfo-items .item .info p {
+        text-indent: 0;
+        text-indent: 20px
     }
 
     .portfolio .header {
@@ -632,10 +693,6 @@ footer .bottom .links a i {
 
     footer .social-links a {
         font-size: 30px;
-    }
-
-    footer .logo img {
-        display: none;
     }
 
     footer .bottom .links {
