--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ footer .logo a {
 nav ul,
 footer .top ul {
   display: flex;
-  margin-right: 30px;
+  margin-right: 15px;
 }
 
 nav button#menuButton {
@@ -642,11 +642,12 @@ footer .bottom .links a i {
 
 @media screen and (max-width: 576px) {
   nav ul li a {
-    font-size: 15px;
+    font-size: 13px;
     margin: 0;
   }
 
   nav {
+    padding: 0 5px;
     display: flex;
     justify-content: end;
   }
@@ -737,11 +738,11 @@ footer .bottom .links a i {
 
 @media screen and (max-width: 300px) {
   nav ul li a {
-    font-size: 9px;
+    font-size: 5px;
   }
 
   nav ul {
-    margin-right: 10px;
+    margin-right: 0;
   }
 
   .skills .skill-items .item h4 {
